[package]
name = "sms-handler"
version = "0.1.0"
authors = ["Thomas Prévost <thomas.prevost@etu.univ-cotedazur.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "*", features = ["blocking"]}
error-chain = "*"
regex = "*"