[package]
name = "sms-handler"
version = "0.1.0"
authors = ["Thomas Prévost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.6", features = ["blocking", "cookies"]}
regex = "1.5.4"
quick-xml = "0.23.0-alpha3"
chrono = "0.4.19"